--- a/public/assets2/css/style.css
+++ b/public/assets2/css/style.css
@@ -471,9 +471,16 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top left;
-  background-size: cover;
+  background-size:auto;
   position: relative;
+}
+
+#videoPlayer {
+  min-height: 100vh;
+  min-width:100%;
+position:absolute;
+bottom:0;
+left:0;
 }
 
 #hero:before {
@@ -495,7 +502,7 @@ h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #222222;
+  color: #f8f6f6;
   font-family: "Poppins", sans-serif;
 }
 
